Subject: Choice of route
ImageButtons for choice of circle route or square route
Included customDialog to interface
Included customDialog via interface to mainActivity, used to display
messages
Included toast in mainactivity

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <!--Images-->
     <string name="bluetooth_symbol_description">Bluetooth</string>
     <string name="vehicle_symbol_description">Vehicle</string>
+    <string name="circle__symbol_description">Circle</string>
+    <string name="square_symbol_description">Square</string>
 
 
 </resources>
