--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="draw_button">draw</string>
     <string name="collection_button">collection</string>
     <string name="start_draw_button">StartDraw</string>
-    <string name="start_collection_button">StartCollection</string>
+    <string name="stop_vehicle_button">Stop Vehicle</string>
 
     <!--Images-->
     <string name="bluetooth_symbol_description">Bluetooth</string>
