--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="collection_button">collection</string>
     <string name="start_draw_button">StartDraw</string>
     <string name="stop_vehicle_button">Stop Vehicle</string>
+    <string name="clear_draw_button">Clear</string>
 
     <!--Images-->
     <string name="bluetooth_symbol_description">Bluetooth</string>
