--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
 
+    //This is the API-key for our
+    <string name="google_map_api_key">AIzaSyAg1zYybWjqZFlUrGVWZcg15JXqnvjbsW0</string>
+
     <!--General-->
     <string name="app_name">SurveillanceRoute</string>
     <string name="start_fragment">start fragment</string>
@@ -7,6 +10,8 @@
     <string name="gateway_fragment">gateway fragment</string>
     <string name="collection_fragment">collection fragment</string>
     <string name="draw_fragment">draw fragment</string>
+    <string name="googlemaps_fragment">googlemaps fragment</string>
+
 
     <!--Buttons-->
     <string name="find_vehicle_button">find vehicle</string>
@@ -24,6 +29,9 @@
     <string name="vehicle_symbol_description">Vehicle</string>
     <string name="circle__symbol_description">Circle</string>
     <string name="square_symbol_description">Square</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
