Subject: Button funcionality and show device
Add Button functionality in the drawFragment.
Connected device is now displayed in some of the fragments.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -26,5 +26,8 @@
     <string name="circle__symbol_description">Circle</string>
     <string name="square_symbol_description">Square</string>
 
+    <!--Random Strings-->
+    <string name="square">Square</string>
+
 
 </resources>
