Subject: Add radiogroup/buttons
Description:
- Add radiogroup to drawFragment and collectionFragment
- Add radiobutton to drawFragment and collectionFragment to change speed
of vehicle instructions

Co-authored-by: EmanuelDellsen <emanuel.dellsen@gmail.com>

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -24,6 +24,10 @@
     <string name="start_draw_button">StartDraw</string>
     <string name="stop_vehicle_button">Stop Vehicle</string>
     <string name="clear_draw_button">Clear</string>
+    <string name="speed_low">Low</string>
+    <string name="speed_med">Medium</string>
+    <string name="speed_high">High</string>
+
 
     <!--Images-->
     <string name="bluetooth_symbol_description">Bluetooth</string>
