Subject: add button text color and state adaptation
Description:
- Add button text color
- Add state adaptation of buttons, color and background
§

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -18,16 +18,16 @@
     <string name="scan_button">scan</string>
     <string name="pair_button">pair</string>
     <string name="unpair_button">unpair</string>
-    <string name="routes_button">routes</string>
-    <string name="draw_button">draw</string>
-    <string name="collection_button">collection</string>
+    <string name="routes_button">Routes</string>
+    <string name="draw_button">Design route</string>
+    <string name="collection_button">Route collection</string>
     <string name="start_draw_button">StartDraw</string>
     <string name="stop_vehicle_button">Stop Vehicle</string>
     <string name="clear_draw_button">Clear</string>
     <string name="speed_low">Low</string>
     <string name="speed_med">Medium</string>
     <string name="speed_high">High</string>
-
+    <string name="google_maps_button">Maps-route</string>
 
     <!--Images-->
     <string name="bluetooth_symbol_description">Bluetooth</string>
