--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -37,5 +37,7 @@
 
     <!--Random Strings-->
     <string name="square">Square</string>
+    <string name="amount_of_repetitions">Amount of repetitions:</string>
+
 
 </resources>
