Subject: Add seekbar and radioGroup
Description:
- Update UI for draw,collection and google maps fragment
- Add seekbar to collection, google maps
- Add radioGroup to collection, google maps fragment

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -37,7 +37,8 @@
 
     <!--Random Strings-->
     <string name="square">Square</string>
-    <string name="amount_of_repetitions">Amount of repetitions:</string>
+    <string name="amount_of_repetitions">Amount of repetitions: %1$s</string>
+
 
 
 </resources>
