--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,19 +3,18 @@
     //This is the API-key for our
     <string name="google_map_api_key">AIzaSyAg1zYybWjqZFlUrGVWZcg15JXqnvjbsW0</string>
 
-    <!--General-->
+    <!-- General -->
     <string name="app_name">RouteDesign</string>
     <string name="start_fragment">start fragment</string>
     <string name="scan_fragment">scan fragment</string>
     <string name="gateway_fragment">gateway fragment</string>
     <string name="collection_fragment">collection fragment</string>
     <string name="draw_fragment">draw fragment</string>
-    <string name="googlemaps_fragment">googlemaps fragment</string>
+    <string name="google_maps_fragment">googlemaps fragment</string>
 
-    <!--Buttons-->
+    <!-- Buttons -->
     <string name="find_vehicle_button">connect to vehicle</string>
     <string name="scan_button">scan</string>
-    <string name="pair_button">pair</string>
     <string name="unpair_button">unpair</string>
     <string name="routes_button">Routes</string>
     <string name="draw_button">Design route</string>
@@ -23,22 +22,21 @@
     <string name="start_draw_button">START VEHICLE</string>
     <string name="stop_vehicle_button">Stop Vehicle</string>
     <string name="clear_draw_button">Clear</string>
+    <string name="google_maps_button">Maps-route</string>
 
+    <!-- Radio buttons -->
     <string name="speed_slow">Slow</string>
     <string name="speed_med">Medium</string>
     <string name="speed_fast">Fast</string>
-    <string name="google_maps_button">Maps-route</string>
 
-    <!--Images-->
+    <!-- Images -->
     <string name="bluetooth_symbol_description">Bluetooth</string>
     <string name="vehicle_symbol_description">Vehicle</string>
     <string name="circle__symbol_description">Circle</string>
     <string name="square_symbol_description">Square</string>
 
-    <!--Random Strings-->
+    <!-- Random Strings -->
     <string name="square">Square</string>
     <string name="amount_of_repetitions">Amount of repetitions: %1$s</string>
-
-
 
 </resources>
