Subject: Add custom dialog border
Description:
- Add custom dialog border
- Add custom dialog layout

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -39,4 +39,11 @@
     <string name="square">Square</string>
     <string name="amount_of_repetitions">Amount of repetitions: %1$s</string>
 
+    <!-- Custom Dialog strings -->
+    <string name="action_cancel">Cancel</string>
+    <string name="action_execute">Execute</string>
+    <string name="dialog_heading">Heading</string>
+
+
+
 </resources>
